--- a/src/templates/apropos.jade
+++ b/src/templates/apropos.jade
@@ -18,7 +18,7 @@ section.background
 				#antho.front
 				#antho.back
 			hr.lines.light.add-top.tiny.centered
-			h6.remove-bot.half-top Marketing
+			h6.remove-bot.half-top Communication
 			p.i.remove-top.text-grey-60 Anthony Lacroix
 		.three.col
 			.flip.double-bottom
