--- a/src/templates/blog.jade
+++ b/src/templates/blog.jade
@@ -21,7 +21,7 @@ section.background
 			h6.half-bot.
 				Twitter
 			hr.remove-top.light.lines
-			a(class="twitter-timeline" data-widget-id="663443703692976128" href="https://twitter.com/thibaudfrere" data-chrome="nofooter noborders noheader noscrollbar transparent").
+			a(class="twitter-timeline" data-widget-id="664148170008633344" href="https://twitter.com/peon_actu" data-chrome="nofooter noborders noheader noscrollbar transparent").
 				Tweets by @Peon
 
 section.background
