--- a/src/templates/home.jade
+++ b/src/templates/home.jade
@@ -55,7 +55,7 @@ section
 			.four.col.quad-top
 				.circle.small-circle.circle-pig.half-top.large-display
 			.eight.col.quad-top
-				h5.remove-bot Gérez vos impayés automatiquement grâce au systeme de relance.
+				h5.remove-bot Gérez vos impayés grâce au systeme de relance.
 				hr.light.lines.half
 				p.quad-bot.
 					Faîtes signer vos devis éléctroniquement et gagnez un temps précieux avec vos client.
