--- a/src/index.jade
+++ b/src/index.jade
@@ -1,4 +1,4 @@
-html
+html(ng-scroll="" ng-app="app")
 	head
 		meta(charset='utf-8')
 		meta(http-equiv='Content-type', content='text/html;charset=UTF-8')
@@ -10,7 +10,7 @@ html
 		meta(name='viewport', content='width=device-width, initial-scale=1.0 maximum-scale=1.0, user-scalable=0')
 			
 		// titre google et d'onglet
-		title Peon
+		title Peon |
 
 		link(rel="icon" href="ressources/favicon.ico")
 
@@ -18,7 +18,7 @@ html
 		meta(name='description', content="Expert comptable automatisé pour auto entrepreneurs.")
 			
 		// keywords and stuff
-		meta(name='keywords', content='devis, facture, auto entrepreneur')
+		meta(name='keywords', content='devis, facture, auto entrepreneur, comptable, comptabilité, prestataire de service, auto-entreprenariat')
 		meta(name='author', content='Thibaud FRERE')
 		meta(name='copyright', content='Thibaud FRERE')
 
@@ -28,7 +28,10 @@ html
 		meta(name='robots', content='index, follow')
 		meta(http-equiv='cache-control', content='public')
 		link(type="text/css", rel="stylesheet", href="styles/style.css")
+		
 		base(href="/")
+		meta(name="fragment" content="!")
+		
 		script(type="text/javascript").
 			!function(){var analytics=window.analytics=window.analytics||[];if(!analytics.initialize)if(analytics.invoked)window.console&&console.error&&console.error("Segment snippet included twice.");else{analytics.invoked=!0;analytics.methods=["trackSubmit","trackClick","trackLink","trackForm","pageview","identify","reset","group","track","ready","alias","page","once","off","on"];analytics.factory=function(t){return function(){var e=Array.prototype.slice.call(arguments);e.unshift(t);analytics.push(e);return analytics}};for(var t=0;t<analytics.methods.length;t++){var e=analytics.methods[t];analytics[e]=analytics.factory(e)}analytics.load=function(t){var e=document.createElement("script");e.type="text/javascript";e.async=!0;e.src=("https:"===document.location.protocol?"https://":"http://")+"cdn.segment.com/analytics.js/v1/"+t+"/analytics.min.js";var n=document.getElementsByTagName("script")[0];n.parentNode.insertBefore(e,n)};analytics.SNIPPET_VERSION="3.1.0";
 			analytics.load("q5l1jwayPS6xa3Kxi0ujZUkKAEjh2g2E");
@@ -61,7 +64,7 @@ html
 			ga('send', 'pageview');
 
 
-	body(ng-scroll="" ng-app="app")
+	body
 		.beta.large-display
 		div(ui-view="")
 		
