update keywords and description

--- a/src/index.jade
+++ b/src/index.jade
@@ -10,17 +10,17 @@ html(ng-scroll="" ng-app="app")
 		meta(name='viewport', content='width=device-width, initial-scale=1.0 maximum-scale=1.0, user-scalable=0')
 			
 		// titre google et d'onglet
-		title Peon |
+		title Peon
 
 		link(rel="icon" href="ressources/favicon.ico")
 
 		// texte google 
-		meta(name='description', content="Expert comptable automatisé pour auto entrepreneurs.")
+		meta(name='description', content="Assistant personnel pour auto entrepreneurs. Il vous accompagne dans la gestion de vos clients, devis, factures, le calcul de vos cotisations et le traitement de vos impayés.")
 			
 		// keywords and stuff
-		meta(name='keywords', content='devis, facture, auto entrepreneur, comptable, comptabilité, prestataire de service, auto-entreprenariat')
-		meta(name='author', content='Thibaud FRERE')
-		meta(name='copyright', content='Thibaud FRERE')
+		meta(name='keywords', content='peon, devis, facture, auto entrepreneur, comptable, comptabilité, prestataire de service, auto-entreprenariat')
+		meta(name='author', content='Blue Screen')
+		meta(name='copyright', content='Blue Screen')
 
 		// url finale de l'index à mettre dans href
 		link(rel='canonical', href='http://peon.fr')
