--- a/src/index.jade
+++ b/src/index.jade
@@ -15,10 +15,10 @@ html(ng-scroll="" ng-app="app")
 		link(rel="icon" href="ressources/favicon.ico")
 
 		// texte google 
-		meta(name='description', content="Assistant personnel pour auto entrepreneurs. Il vous accompagne dans la gestion de vos clients, devis, factures, le calcul de vos cotisations et le traitement de vos impayés.")
-			
+		meta(name='description', content="Assistant personnel pour auto-entrepreneur. Il vous accompagne dans la gestion de vos clients, devis, factures, calcul de vos cotisations et traitement de vos impayés.")
+
 		// keywords and stuff
-		meta(name='keywords', content='peon, devis, facture, auto entrepreneur, comptable, comptabilité, prestataire de service, auto-entreprenariat')
+		meta(name='keywords', content='peon, devis, facture, auto entrepreneur, comptabilité, prestataire de service, auto entreprenariat, impayés, signature electronique, libéral, artisan, ')
 		meta(name='author', content='Blue Screen')
 		meta(name='copyright', content='Blue Screen')
 
