--- a/src/templates/home.jade
+++ b/src/templates/home.jade
@@ -3,18 +3,16 @@ section.background
 	#main-background
 	#welcome.large-display
 	#content.container
-		.twelve.col
+		.twelve.col.double-top
 			h3.text-right.six-top.remove-bot.text-white.
 
 				<b>Une bonne raison d'entreprendre</b> 
 			h6.text-right.text-white.double-bot.
-				Gestion <b>auto-entrepreneur</b> pour prestataires de services et activités libérales
-			.pull-right
+				Assistant personnel pour <b>auto-entrepreneur</b> prestataires de services et activités libérales
+			.pull-right.quad-bot
 				a.cta.button.half-right.primary(ng-click="trackCta1()" href="http://app.peon.fr/inscription") Mois d'essais gratuit
 				a.cta.button.complement(ng-click="trackCta1()" href="http://app.peon.fr/connexion") Demo
 			.clearfix
-			p.text-white.text-right.quad-bot.
-				Seulement <b>4.90</b> par mois.
 #cookie(ng-show="setCookie == false")
 	.container
 		.row
@@ -30,8 +28,8 @@ section
 				h5.add-top.remove-bot Vos factures en 42 secondes
 				hr.light.lines.half
 				p.quad-bot.
-					Peon est un expert comptable totalement automatisé permettant de vous concentrer uniquement sur les besoins réels de votre entreprise. 
-					Avec ça, plus d'excuses !
+					Ne perdez plus de temps avec la paperasse. Concentrez vous uniquement sur les besoins réels de votre entreprise.
+					Peon se charge de tout.
 			.six.col
 					#video-container.double-top
 						#video-box.double-bot(ng-init="isVideoClicked=false")
@@ -44,21 +42,21 @@ section
 						.clearfix
 		.row
 			.eight.col.quad-top
-				h5.text-right.remove-bot Gagnez du temps grâce à la signature electronique !
+				h5.text-right.remove-bot Gagnez du temps avec vos client
 				hr.light.lines.half.right.pull-right
 				.clearfix
 				p.text-right.quad-bot.
-					Faîtes signer vos devis éléctroniquement et gagnez un temps précieux avec vos client.
+					Et faîtes leur valider vos devis éléctroniquement.
 			.four.col.quad-top
 				.circle.small-circle.circle-calculator.half-top.large-display
 		.row
 			.four.col.quad-top
 				.circle.small-circle.circle-pig.half-top.large-display
 			.eight.col.quad-top
-				h5.remove-bot Gérez vos impayés grâce au systeme de relance.
+				h5.remove-bot Ne vous souciez plus de vos impayés
 				hr.light.lines.half
 				p.quad-bot.
-					Faîtes signer vos devis éléctroniquement et gagnez un temps précieux avec vos client.
+					Des relances automatiques préviennent votre client à chaque étape du projet.
 section
 	.container
 		.row
