--- a/src/index.jade
+++ b/src/index.jade
@@ -18,7 +18,7 @@ html(ng-scroll="" ng-app="app")
 		meta(name='description', content="Assistant personnel pour auto-entrepreneur. Il vous accompagne dans la gestion de vos clients, devis, factures, calcul de vos cotisations et traitement de vos impayés.")
 
 		// keywords and stuff
-		meta(name='keywords', content='peon, devis, facture, auto entrepreneur, comptabilité, prestataire de service, auto entreprenariat, impayés, signature electronique, libéral, artisan, ')
+		meta(name='keywords', content="peon, devis, facture, auto entrepreneur, comptabilité, prestataire de service, auto entreprenariat, impayés, signature electronique, libéral, artisan, s'inscrire, démarche création")
 		meta(name='author', content='Blue Screen')
 		meta(name='copyright', content='Blue Screen')
 
