--- a/src/styles/abstract/color.scss
+++ b/src/styles/abstract/color.scss
@@ -2,7 +2,7 @@
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
 	$color-primary:					#ff8900;
-	$color-complement:				#26272C;
+	$color-complement:				#518196;
 	$color-success:					#149A57;
 	$color-info:					#303E73;
 	$color-danger:					#D23D29;
