--- a/src/templates/home.jade
+++ b/src/templates/home.jade
@@ -46,7 +46,7 @@ section
 				hr.light.lines.half.right.pull-right
 				.clearfix
 				p.text-right.quad-bot.
-					Et faîtes leur valider vos devis éléctroniquement.
+					Et faîtes leur valider vos devis éléctroniquement en quelques secondes, vous receverez instantanément la confirmation.
 			.four.col.quad-top
 				.circle.small-circle.circle-calculator.half-top.large-display
 		.row
@@ -56,7 +56,7 @@ section
 				h5.remove-bot Ne vous souciez plus de vos impayés
 				hr.light.lines.half
 				p.quad-bot.
-					Des relances automatiques préviennent votre client à chaque étape du projet.
+					Une alerte vous prévient en cas de non règlement et Peon effectue les démarches de recouvrement amiable.
 section
 	.container
 		.row
