--- a/src/templates/apropos.jade
+++ b/src/templates/apropos.jade
@@ -9,28 +9,28 @@ section.background
 		.three.col
 			.flip.double-bottom
 				#quentin.front
-				#quentin.back
+				#quentin-back.back 
 			hr.lines.light.add-top.tiny.centered
 			h6.remove-bot.half-top Illustration
 			p.i.remove-top.text-grey-60 Quentin Sombsthay
 		.three.col
 			.flip.double-bottom
 				#antho.front
-				#antho.back
+				#antho-back.back
 			hr.lines.light.add-top.tiny.centered
 			h6.remove-bot.half-top Communication
 			p.i.remove-top.text-grey-60 Anthony Lacroix
 		.three.col
 			.flip.double-bottom
 				#val.front
-				#val.back
+				#val-back.back
 			hr.lines.light.add-top.tiny.centered
 			h6.remove-bot.half-top Developpement
 			p.i.remove-top.text-grey-60 Valentin Rebierre
 		.three.col
 			.flip.double-bottom
 				#thib.front
-				#thib.back
+				#thib-back.back
 			hr.lines.light.add-top.tiny.centered
 			h6.remove-bot.half-top Design
 			p.i.remove-top.text-grey-60 Thibaud Frere
