--- a/src/templates/cgu.jade
+++ b/src/templates/cgu.jade
@@ -3,9 +3,9 @@ section.background
 	#general-background
 	.container
 		.twelve.col
-			h3.b.text-white.text-center Contrat générale d'utilisation
+			h3.b.text-white.text-center Contrat général d'utilisation
 .container
-	.row.double-top.double-bot
+	.row.quad-top.double-bot
 		h5 Préambule
 		hr.light.lines
 		p.
