--- a/src/templates/home.jade
+++ b/src/templates/home.jade
@@ -42,21 +42,21 @@ section
 						.clearfix
 		.row
 			.eight.col.quad-top
-				h5.text-right.remove-bot Gagnez du temps avec vos client
-				hr.light.lines.half.right.pull-right
+				h5.text-right.remove-bot Gagnez du temps avec la validation electronique
+				hr.light.lines.tiny.right.pull-right
 				.clearfix
 				p.text-right.quad-bot.
-					Et faîtes leur valider vos devis éléctroniquement en quelques secondes, vous receverez instantanément la confirmation.
+					Votre client valide son devis en quelques secondes et vous receverez instantanément la confirmation.
 			.four.col.quad-top
 				.circle.small-circle.circle-calculator.half-top.large-display
 		.row
 			.four.col.quad-top
 				.circle.small-circle.circle-pig.half-top.large-display
 			.eight.col.quad-top
-				h5.remove-bot Ne vous souciez plus de vos impayés
-				hr.light.lines.half
+				h5.remove-bot Ignorez vos impayés grâce au traîtement automatique
+				hr.light.lines.tiny
 				p.quad-bot.
-					Une alerte vous prévient en cas de non règlement et Peon effectue les démarches de recouvrement amiable.
+					Une alerte vous prévient en cas de non règlement et Peon effectue les démarches de recouvrement amiable et mise en demeure.
 section
 	.container
 		.row
