--- a/src/templates/faq.jade
+++ b/src/templates/faq.jade
@@ -19,8 +19,8 @@ section.background
 				.background-2
 				p.text-left.add-top.double-left.b.
 					Statut
-			.clearfix.double-bot
-			div#question_handler(ui-view="")
+			.clearfix
+		div.double-top#question_handler(ui-view="")
 		form(name="form" novalidate).row.quad-top.double-bot
 			.eight.offset-two.col.double-top
 				hr.light.centered.tiny.lines.half-bot
