--- a/src/templates/faq.jade
+++ b/src/templates/faq.jade
@@ -21,7 +21,7 @@ section.background
 					Statut
 			.clearfix
 		div.double-top#question_handler(ui-view="")
-		form(name="form" novalidate).row.quad-top.double-bot
+		form(name="form" novalidate).row.double-top
 			.eight.offset-two.col.double-top
 				hr.light.centered.tiny.lines.half-bot
 				h4.text-center Ou posez nous directement la question
