--- a/src/templates/home.jade
+++ b/src/templates/home.jade
@@ -18,7 +18,7 @@ section.background
 		.row
 			.twelve.col
 				p.pull-left.
-					Pour votre confort, ce site utilise des cookies
+					 Peon utilise des cookies pour rendre son site plus simple. <a ui-sref="nav.cookies">En savoir plus sur les cookies</a>.
 				i.icon.icon-cross.pull-right(ng-click="updateCookie()")
 section
 	.clearfix
@@ -46,7 +46,7 @@ section
 				hr.light.lines.tiny.right.pull-right
 				.clearfix
 				p.text-right.quad-bot.
-					Votre client valide son devis en quelques secondes et vous receverez instantanément la confirmation.
+					Votre client valide son devis en quelques secondes et vous receverez instantanément une confirmation.
 			.four.col.quad-top
 				.circle.small-circle.circle-calculator.half-top.large-display
 		.row
@@ -56,7 +56,7 @@ section
 				h5.remove-bot Ignorez vos impayés grâce au traîtement automatique
 				hr.light.lines.tiny
 				p.quad-bot.
-					Une alerte vous prévient en cas de non règlement et Peon effectue les démarches de recouvrement amiable et mise en demeure.
+					Une alerte vous prévient en cas de non règlement et Peon effectue les démarches de recouvrement amiable et de mise en demeure.
 section
 	.container
 		.row
