--- a/src/styles/atom/button.scss
+++ b/src/styles/atom/button.scss
@@ -88,6 +88,14 @@
                   top:2px;
                   @include box-shadow(0px, 3px, 0px, $color-complement-dark);
                 }
+                &:active {
+                  top: 5px;
+                  -webkit-box-shadow: none !important;
+                  -moz-box-shadow: none !important;
+                  -ms-box-shadow: none !important;
+                  -o-box-shadow: none !important;
+                  box-shadow: none !important;
+                }
               }
             }
 
