--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -34,6 +34,7 @@
 @import "molecule/nav";
 @import "molecule/question";
 @import "molecule/newsletter";
+@import "molecule/article";
 
 #thib {
 	@include cover();
