--- a/src/templates/assistance.jade
+++ b/src/templates/assistance.jade
@@ -19,14 +19,14 @@ section.background
 				#antho.front
 				#antho-back.back
 			hr.lines.light.add-top.tiny.centered
-			h6.remove-bot.half-top Aide juridique
+			h6.remove-bot.half-top Conseil
 			p.i.remove-top.text-grey-60 Anthony Lacroix
 		.card.three.col
 			.flip.double-top.double-bottom
 				#val.front
 				#val-back.back
 			hr.lines.light.add-top.tiny.centered
-			h6.remove-bot.half-top Développement
+			h6.remove-bot.half-top Maintenance
 			p.i.remove-top.text-grey-60 Valentin Rebierre
 		.card.three.col
 			.flip.double-top.double-bottom
