--- a/src/templates/home.jade
+++ b/src/templates/home.jade
@@ -25,7 +25,7 @@ section
 	.container
 		.row
 			.six.col.quad-top
-				h5.add-top.remove-bot Vos factures en 42 secondes
+				h5.add-top.remove-bot Vos factures en quelques secondes
 				hr.light.lines.half
 				p.quad-bot.
 					Ne perdez plus de temps avec la paperasse. Concentrez vous uniquement sur les besoins réels de votre entreprise.
