--- a/src/templates/nav.jade
+++ b/src/templates/nav.jade
@@ -3,7 +3,7 @@ nav
 		.row
 			.twelve.col
 				a#logo.pull-left(ui-sref-active="active" ui-sref="nav.home")
-				a.pull-left.uppercase.large-display(ui-sref-active="active" ui-sref="nav.assistance") Asssistance
+				a.pull-left.uppercase.large-display(ui-sref-active="active" ui-sref="nav.assistance") Assistance
 				a.pull-left.uppercase.large-display(ui-sref-active="active" ui-sref="nav.blog") Blog
 				a.pull-left.uppercase.large-display(ui-sref-active="active" ui-sref="nav.faq") Fiches pratiques
 				a.button.small.pull-right.complement(href="http://app.peon.fr") Se connecter
