--- a/src/templates/home.jade
+++ b/src/templates/home.jade
@@ -8,9 +8,9 @@ section.background
 
 				<b>Une bonne raison d'entreprendre</b> 
 			h6.text-right.text-white.double-bot.
-				Assistant personnel pour <b>auto-entrepreneur</b> prestataires de services et activités libérales
+				Assistant personnel pour <b>auto-entrepreneurs</b> prestataires de services et activités libérales
 			.pull-right.quad-bot
-				a.cta.button.half-right.primary(ng-click="trackCta1()" href="http://app.peon.fr/inscription") Mois d'essais gratuit
+				a.cta.button.half-right.primary(ng-click="trackCta1()" href="http://app.peon.fr/inscription") Mois d'essai gratuit
 				a.cta.button.complement(ng-click="trackCta1()" href="http://app.peon.fr/connexion") Demo
 			.clearfix
 #cookie(ng-show="setCookie == false")
