--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -19,6 +19,7 @@
 @import "atom/button";
 @import "atom/code";
 @import "atom/input";
+@import "atom/select";
 @import "atom/table";
 @import "atom/list";
 @import "atom/checkbox";
