--- a/src/templates/home.jade
+++ b/src/templates/home.jade
@@ -4,14 +4,12 @@ section.background
 	#welcome.large-display
 	#content.container
 		.twelve.col.double-top
-			h3.text-right.six-top.remove-bot.text-white.
-
-				<b>Une bonne raison d'entreprendre</b> 
-			h6.text-right.text-white.double-bot.
-				Assistant personnel pour <b>auto-entrepreneurs</b> prestataires de services et activités libérales
+			h3.text-right.six-top.remove-bot.text-white
+				b(compile-unsafe="'views.main.punchline' | translate")
+			h6.text-right.text-white.double-bot(compile-unsafe="'views.main.subline' | translate")
 			.pull-right.quad-bot
-				a.cta.button.half-right.primary(ng-click="trackCta1()" href="http://app.peon.fr/inscription") Mois d'essai gratuit
-				a.cta.button.complement(ng-click="trackCta1()" href="http://app.peon.fr/connexion") Demo
+				a.cta.button.half-right.primary(ng-click="trackCta1()" href="http://app.peon.fr/inscription" compile-unsafe="'views.main.cta1' | translate")
+				a.cta.button.complement(ng-click="trackCta1()" href="http://app.peon.fr/connexion" compile-unsafe="'views.main.cta2' | translate") Demo
 			.clearfix
 #cookie(ng-show="setCookie == false")
 	.container
@@ -25,11 +23,9 @@ section
 	.container
 		.row
 			.six.col.quad-top
-				h5.add-top.remove-bot Vos factures en quelques secondes
+				h5(compile-unsafe="'views.main.titleVideo' | translate").add-top.remove-bot
 				hr.light.lines.half
-				p.quad-bot.
-					Ne perdez plus de temps avec la paperasse. Concentrez vous uniquement sur les besoins réels de votre entreprise.
-					Peon se charge de tout.
+				p(compile-unsafe="'views.main.textVideo' | translate").quad-bot
 			.six.col
 					#video-container.double-top
 						#video-box.double-bot(ng-init="isVideoClicked=false")
@@ -42,54 +38,52 @@ section
 						.clearfix
 		.row
 			.eight.col.quad-top
-				h5.text-right.remove-bot Gagnez du temps avec la validation electronique
+				h5(compile-unsafe="'views.main.titleArg1' | translate").text-right.remove-bot
 				hr.light.lines.tiny.right.pull-right
 				.clearfix
-				p.text-right.quad-bot.
-					Votre client valide son devis en quelques secondes et vous receverez instantanément une confirmation.
+				p(compile-unsafe="'views.main.textArg1' | translate").text-right.quad-bot
 			.four.col.quad-top
 				.circle.small-circle.circle-calculator.half-top.large-display
 		.row
 			.four.col.quad-top
 				.circle.small-circle.circle-pig.half-top.large-display
 			.eight.col.quad-top
-				h5.remove-bot Ignorez vos impayés grâce au traîtement automatique
+				h5(compile-unsafe="'views.main.titleArg2' | translate").remove-bot
 				hr.light.lines.tiny
-				p.quad-bot.
-					Une alerte vous prévient en cas de non règlement et Peon effectue les démarches de recouvrement amiable et de mise en demeure.
+				p(compile-unsafe="'views.main.textArg2' | translate").quad-bot
 section
 	.container
 		.row
 			.twelve.col
 				hr.light.lines.tiny.quad-top.half-bot.centered
-				h4.text-center En détails, ça fait quoi ?
+				h4(compile-unsafe="'views.main.titleDetails' | translate").text-center
 				hr.light.lines.tiny.quad-bot.centered
 		.row
 			.four.col
 				.circle.small-circle.circle-responsive
-				p.i.add-top.text-center Accessible sur tablette et PC.
+				p(compile-unsafe="'views.main.infoDetails1' | translate").i.add-top.text-center
 			.four.col
 				.circle.small-circle.circle-cloudsafe
-				p.i.add-top.text-center Données sécurisées.
+				p(compile-unsafe="'views.main.infoDetails2' | translate").i.add-top.text-center
 			.four.col
 				.circle.small-circle.circle-papers
-				p.i.add-top.text-center Factures instantannées
+				p(compile-unsafe="'views.main.infoDetails3' | translate").i.add-top.text-center
 		.row.octo-bot.double-top
 			.four.col
 				.circle.small-circle.circle-calculator
-				p.i.add-top.text-center Calcul des cotisations.
+				p(compile-unsafe="'views.main.infoDetails4' | translate").i.add-top.text-center
 			.four.col
 				.circle.small-circle.circle-pig
-				p.i.add-top.text-center Gestion des impayés.
+				p(compile-unsafe="'views.main.infoDetails5' | translate").i.add-top.text-center
 			.four.col
 				.circle.small-circle.circle-unlimited
-				p.i.add-top.text-center Sans engagement.
+				p(compile-unsafe="'views.main.infoDetails6' | translate").i.add-top.text-center 
 section.background
 	#peon
 	.main-texture
 	.container
 		.row
 			.twelve.col
-				h4.text-white.text-center.quad-top Convaincu ou non, essayez-le !
+				h4(compile-unsafe="'views.main.tryAnyway' | translate").text-white.text-center.quad-top
 				.fluid-horizontal-center
-					a(ng-click="trackCta1()" href="http://app.peon.fr").cta.button.double-bot.primary C'est gratuit
+					a(ng-click="trackCta1()" href="http://app.peon.fr" compile-unsafe="'views.main.tryAnywayButton' | translate").cta.button.double-bot.primary
